         some peripherals.
20110118 machines/{spec16.c,spec48.c,pentagon.c,spec_se.c,specplus2a.c,
         specplus3.c,pentagon1024.c,tc2048.c,spec128.c,tc2068.c,scorpion.c,
         spec48_ntsc.c},periph.[ch],ula.[ch]: use new peripheral framework to
         handle the ULA.
20110118 ay.c,machines/{pentagon1024.c,pentagon.c,scorpion.c,spec128.c,spec16.c,
         spec48.c,spec48_ntsc.c,specplus2a.c,specplus3.c,spec_se.c,tc2048.c,
         tc2068.c},periph.h,printer.[ch]: use new peripheral framework for the
         ZX Printer and 128K AY chip.
20110120 machines/{spec_se.c,tc2048.c,tc2068.c},periph.h,scld.[ch]: use new
         peripheral framework for SCLD.
20110120 event.c: event_reset() returns void (thanks, zx81).
20110120 fuse.c,machines/{Makefile.am,pentagon.c,scorpion.c,spec128.c,spec128.h,
         spec48.c,specplus2a.c,specplus2.c,specplus3.c},periph.h: use new
         peripheral framework for 128K and +3 memory paging.
20110120 machines/{pentagon.c,scorpion.c}: fix Russian clone memory paging.
20110120 machines/machines_periph.[ch]: remember to add new files.
20110124 machines/{machines_periph.[ch],pentagon1024.c,pentagon512.c,
         pentagon.[ch],scorpion.c,spec128.[ch],spec16.c,spec48.[ch],
         spec48_ntsc.c,specplus2a.c,specplus2.c,specplus3.[ch],specplus3e.c,
         spec_se.c,tc2048.c,tc2068.[ch],ts2068.c}: further refactoring of
         common peripherals code.
20110125 ay.c,machines/{machines_periph.c,specplus2a.c,specplus3.c,specplus3e.c,
         specplus3.h,spec_se.c},periph.h,printer.[ch]: move a few more bits into
         the new peripherals framework.
20110126 machines/{machines_periph.c,pentagon1024.c,pentagon512.c,pentagon.[ch],
         scorpion.c,spec128.c,spec16.c,spec48.c,spec48_ntsc.c,specplus2a.c,
         specplus2.c,specplus3.c,specplus3e.c,spec_se.c,tc2048.c,tc2068.c,
         tc2068.h,ts2068.c},periph.[ch]: move final peripherals into new
         framework. This allows us to kill periph_setup().